<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="255dp"
        android:layout_height="204dp"
        android:contentDescription="@string/blue_logo_welcome"
        app:layout_constraintBottom_toTopOf="@+id/welcome_t1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blue" />

    <TextView
        android:id="@+id/welcome_t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_bold"
        android:text="@string/welcomet1"
        android:textColor="#394F90"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_t2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/welcome_t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/welcomet2"
        android:fontFamily="@font/agi"
        android:text="@string/welcomet2"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_drawing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_t1" />

    <ImageView
        android:id="@+id/welcome_drawing"
        android:layout_width="335dp"
        android:layout_height="279dp"
        android:contentDescription="@string/welcomeDrawing"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_t2"
        app:srcCompat="@drawable/welcomedrawing" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signuprec"
        android:fontFamily="@font/lora_bold"
        android:paddingBottom="25dp"
        android:text="@string/signUpButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_drawing" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signinrec"
        android:fontFamily="@font/lora_bold"
        android:paddingBottom="25dp"
        android:text="@string/signInButton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />




</androidx.constraintlayout.widget.ConstraintLayout>
